# FASTAPI-RBAC

./: .env  main.py  pyproject.toml
app/api/: deps.py
app/api/routes/v1/: auth.py
app/core/: config.py  database.py  permissions.py  security.py
app/models/: permission.py  refresh_token.py  role.py  role_permission.py  user.py
app/schemas/: auth.py  user.py
